# gwastic_desktop

./: README.md  create_val.py  demo.py  environment.yml  her_test.py  her_test2.py  pheno_gwas2.csv  pheno_gwas3.csv  plot.py  plot_geno_PCA.py  plot_geno_density.py  plot_geno_kinship.py  plot_pheno.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
gwastic/: README.md  gwas_nn.py  gwas_pipeline.py  helpers.py  main_gui.py  pyproject.toml
gwastic_desktop/: gp_pipeline.py  gwas_ai.py  gwas_nn.py  gwas_pipeline.py  helpers.py  main_gui.py  plot_pipeline.py  requirements.txt  settings.ini
