[tool.poetry]
name = "gwastic-desktop"
version = "0.5.5"
description = "GWAS software that combines traditional statistical methods with the power of Artificial Intelligence"
authors = ["Stefanie Lueck <lueck@ipk-gatersleben.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
dearpygui = "."
dearpygui-ext = "."
pandas = "."
fastlmm = "."
geneview = "."
matplotlib = "."
xgboost = "."
scikit-learn="."
scipy="."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gwastic = "gwastic_desktop.main_gui:main"

